added new branch

--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
         </section>
     </main>
 
+    this is an floar document
+
     <footer>
         &copy; 2023 Medical Website. All rights reserved.
     </footer>
